src/test/deca/test_compilateur/context/invalid/created/instanceof/instanceof_a_float.deca
// Description :
//    test instanceof entre un a et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10 : (3.40) Type gauche : <>, attendu : 'class' ou 'null',  Type droit : <>, attendu : 'class'
class A{}
{
A a;
boolean c = a instanceof float;
}
